log

Thu 14 Mar 2024 02:44:59 PM UTC: 
 exercises.c | 52 +++++++++++++++++++++++++++++++++++++++++++++-------
 1 file changed, 45 insertions(+), 7 deletions(-)
In file included from test.c:1:
exercises.c:30:1: error: expected identifier or ‘(’ before ‘{’ token
   30 | {
      | ^
exercises.c:83:1: error: expected identifier or ‘(’ before ‘{’ token
   83 | {
      | ^
Compilation failed
defccce
